[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.14"
num = "0.4.0"
regex = "1.6.0"
once_cell = "1.15.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
rand = "0.8.5"