[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = "4.0.18"
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.1"
rand = "0.8.5"